Make sure pip can install wheels.

--- a/tox.ini
+++ b/tox.ini
@@ -4,8 +4,9 @@ envlist = pypy, py27, pyflakes, sphinx
 [testenv]
 setenv =
     FLOCKER_INSTALLED = 1
+deps = pip>=1.5.6
 commands =
-    trial flocker
+    trial --rterrors flocker
 
 [testenv:pypy]
 basepython = pypy
