Address review comment: Explain pip post-install.

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist = pypy, py27, pyflakes, sphinx
 [testenv]
 setenv =
     FLOCKER_INSTALLED = 1
+# We want modern pip so we can install packages that only have wheels:
 deps = pip>=1.5.6
 commands =
     trial --rterrors flocker
