--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pypy, py27, pyflakes, sphinx
+envlist = pypy, py27, flake8, sphinx
 
 [testenv]
 setenv =
@@ -15,10 +15,10 @@ basepython = pypy
 [testenv:py27]
 basepython = python2.7
 
-[testenv:pyflakes]
+[testenv:flake8]
 basepython = python2.7
-deps = pyflakes
-commands = pyflakes flocker
+deps = flake8
+commands = flake8 flocker
 
 [testenv:sphinx]
 basepython = python2.7
