--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,7 @@ setenv =
 # We want modern pip so we can install packages that only have wheels:
 deps = pip>=1.5.6
 commands =
+    pip install ./ flocker[dev]
     trial --rterrors flocker
 
 [testenv:pypy]
