modified:   tox.ini, exclude _version.py from flake8 testing

--- a/tox.ini
+++ b/tox.ini
@@ -18,7 +18,7 @@ basepython = python2.7
 [testenv:flake8]
 basepython = python2.7
 deps = flake8
-commands = flake8 flocker
+commands = flake8 --exclude=_version.py flocker
 
 [testenv:sphinx]
 basepython = python2.7
