change environment name to lint

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = pypy, py27, flake8, sphinx
+envlist = pypy, py27, lint, sphinx
 
 [testenv]
 setenv =
@@ -15,7 +15,7 @@ basepython = pypy
 [testenv:py27]
 basepython = python2.7
 
-[testenv:flake8]
+[testenv:lint]
 basepython = python2.7
 deps = flake8
 commands = flake8 --exclude=_version.py flocker
