Committing something ugly that sort of works

--- a/flocker/node/functional/Dockerfile
+++ b/flocker/node/functional/Dockerfile
@@ -1,3 +1,3 @@
 FROM busybox
 MAINTAINER Hybrid Logic <support@hybridcluster.com>
-CMD ["/usr/bin/nc", "127.0.0.1", "31337"]
+CMD ["/bin/sh",  "-c", "sleep 1 && echo 'xxx' | nc 127.0.0.1 31337"]
