--- a/flocker/node/functional/docker/Dockerfile
+++ b/flocker/node/functional/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM busybox
 MAINTAINER ClusterHQ <support@clusterhq.com>
 ADD . /
-CMD ["/bin/sh",  "-e", "run.sh"]
+CMD ["/bin/sh",  "-e", "run.sh", "127.0.0.1", "31337", "xxx", "10"]
