Implement a Dockerfile template feature which allows the host, port and bytes to be supplied from within the test.

--- a/flocker/node/functional/docker/Dockerfile.in
+++ b/flocker/node/functional/docker/Dockerfile.in
@@ -1,4 +1,4 @@
 FROM busybox
 MAINTAINER ClusterHQ <support@clusterhq.com>
 ADD . /
-CMD ["/bin/sh",  "-e", "run.sh", "127.0.0.1", "31337", "xxx", "10"]
+CMD ["/bin/sh",  "-e", "run.sh", "{host}", "{port}", "{bytes}", "{timeout}"]
