Add PyYAML to the flocker.spec template. Specify version 3.10 which is provided by Fedora20.

--- a/flocker.spec.in
+++ b/flocker.spec.in
@@ -23,6 +23,7 @@ BuildRequires:  python-ipaddr = 2.1.10
 BuildRequires:  python-netifaces >= 0.8.0
 BuildRequires:  python-treq = 0.2.1
 BuildRequires:  python-nomenclature >= 0.1.0
+BuildRequires:  PyYAML = 3.10
 # See https://github.com/ClusterHQ/flocker/issues/85
 BuildRequires:  docker-io
 
@@ -35,6 +36,7 @@ Requires:       python-ipaddr = 2.1.10
 Requires:       python-netifaces >= 0.8.0
 Requires:       python-treq = 0.2.1
 Requires:       python-nomenclature >= 0.1.0
+Requires:       PyYAML = 3.10
 Requires:       docker-io
 Requires:       /sbin/iptables
 Requires:       geard
