Update the description by copying the README.

--- a/flocker.spec.in
+++ b/flocker.spec.in
@@ -45,7 +45,11 @@ Requires:       /sbin/iptables
 Requires:       geard
 
 %description
-probably a replication-based fail-over product
+Flocker is an open-source volume manager and multi-host Docker container
+orchestration tool.  With it you can control your data using the same tools you
+use for your stateless applications.  This means that you can run your
+databases, queues and key-value stores in Docker and move them around as easily
+as the rest of your app.
 
 
 %prep
