Run tox against installed version.
By default tox runs tests in source directory.

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist = pypy, py27, lint, sphinx
 [testenv]
 # We want modern pip so we can install packages that only have wheels:
 deps = pip>=1.5.6
+changedir = {envtmpdir}
 commands =
     pip install ./ flocker[dev]
     trial --rterrors flocker
@@ -17,10 +18,12 @@ basepython = python2.7
 [testenv:lint]
 basepython = python2.7
 deps = flake8
+changedir = {toxinidir}
 commands = flake8 --exclude=_version.py flocker
 
 [testenv:sphinx]
 basepython = python2.7
+changedir = {toxinidir}
 commands =
     pip install ./ flocker[doc]
     sphinx-build -b html docs/ docs/_build/html
