Don't reinstall flocker package in tox.
tox builds an sdist and installs it automatically. Installing the source
directory as well is redundant and muddles testing of installing from an sdist.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist = pypy, py27, lint, sphinx
 deps = pip>=1.5.6
 changedir = {envtmpdir}
 commands =
-    pip install ./ flocker[dev]
+    pip install Flocker[dev]
     trial --rterrors flocker
 
 [testenv:pypy]
@@ -25,5 +25,5 @@ commands = flake8 --exclude=_version.py flocker
 basepython = python2.7
 changedir = {toxinidir}
 commands =
-    pip install ./ flocker[doc]
+    pip install Flocker[doc]
     sphinx-build -b html docs/ docs/_build/html
