Address review comments.

--- a/vagrant/base/Vagrantfile
+++ b/vagrant/base/Vagrantfile
@@ -11,7 +11,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   # Configure pip (for root and vagrant)
   config.vm.provision :shell, :path => "pip.sh", :privileged => true
   config.vm.provision :shell, :path => "pip.sh", :privileged => false
-  # Prepare cahces
+  # Prepare caches
   config.vm.provision :shell, :path => "cache.sh", :privileged => true
   # Cleanup
   config.vm.provision :shell, :path => "cleanup.sh", :privileged => true
