Add a comment about why we change directory.

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,8 @@ envlist = pypy, py27, lint, sphinx
 [testenv]
 # We want modern pip so we can install packages that only have wheels:
 deps = pip>=1.5.6
+# Change out out of the source directory, so we are testing the installed
+# version.
 changedir = {envtmpdir}
 commands =
     pip install Flocker[dev]
