--- a/docs/tutorial/Vagrantfile
+++ b/docs/tutorial/Vagrantfile
@@ -7,6 +7,9 @@ VAGRANTFILE_API_VERSION = "2"
 
 $bootstrap = <<SCRIPT
 set -e
+
+mv clusterhq-flocker.repo /etc/yum.repos.d/
+
 yum install -y zfs
 
 yum install -y flocker-node
@@ -19,19 +22,20 @@ SCRIPT
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "clusterhq/flocker-dev"
-
+  config.vm.provision :file, :source => "clusterhq-flocker.repo", :destination => "clusterhq-flocker.repo"
   config.vm.provision :shell, :inline => $bootstrap, :privileged => true
 
   if Vagrant.has_plugin?("vagrant-cachier")
     config.cache.scope = :box
   end
 
-
   config.vm.define "node1" do |node1|
+    node1.vm.network :private_network, :ip => "172.16.255.250"
     node1.vm.hostname = "node1"
   end
 
   config.vm.define "node2" do |node2|
+    node2.vm.network :private_network, :ip => "172.16.255.251"
     node2.vm.hostname = "node2"
   end
 
