Add sketch of install instructions.

--- a/python-flocker.spec.in
+++ b/python-flocker.spec.in
@@ -47,8 +47,9 @@ Requires:       python-flocker = %{version}-%{release}
 Summary:        Node software for flocker
 Requires:       python-flocker = %{version}-%{release}
 Requires:       docker-io
-Requires:       /sbin/iptables
+Requires:       /usr/sbin/iptables
 Requires:       geard
+Requires:       zfs
 
 %description
 Flocker is an open-source volume manager and multi-host Docker container
