Copy the file from the right place.
Also maybe mkdir -p is okay.  It shouldn't make any difference in most cases
but if you need to re-provision a node it will prevent the bootstrap script from
failing.

--- a/docs/tutorial/Vagrantfile
+++ b/docs/tutorial/Vagrantfile
@@ -25,8 +25,8 @@ systemctl enable geard
 systemctl start geard
 
 # Make it easy to authenticate as root
-mkdir /root/.ssh
-cp ~/.ssh/authorized_keys /root/.ssh
+mkdir -p /root/.ssh
+cp ~vagrant/.ssh/authorized_keys /root/.ssh
 
 SCRIPT
 
