Need to mention all nodes to ensure flocker-deploy communicates with all of them.

--- a/docs/tutorial/minimal-deployment.yml
+++ b/docs/tutorial/minimal-deployment.yml
@@ -1,4 +1,4 @@
 "version": 1
 "nodes":
-  "172.16.255.250":
-    - "mongodb-example"
+  "172.16.255.250": ["mongodb-example"]
+  "172.16.255.251": []
