--- a/docs/tutorial/minimal-deployment-moved.yml
+++ b/docs/tutorial/minimal-deployment-moved.yml
@@ -1,4 +1,4 @@
 "version": 1
 "nodes":
-  "172.16.255.251":
-    - "mongodb-example"
+  "172.16.255.250": []
+  "172.16.255.251": ["mongodb-example"]
