--- a/python-flocker.spec.in
+++ b/python-flocker.spec.in
@@ -113,6 +113,7 @@ trial flocker
 
 %{_bindir}/flocker-volume
 %{_bindir}/flocker-changestate
+%{_bindir}/flocker-reportstate
 
 %changelog
 * Tue Jun 10 2014 Tom Prince - %{underscore_version}-1%{?dist}
