Use random hash seed in tox to better catch these issues locally.

--- a/tox.ini
+++ b/tox.ini
@@ -10,6 +10,8 @@ changedir = {envtmpdir}
 commands =
     pip install Flocker[dev]
     trial --rterrors flocker
+setenv =
+    PYTHONHASHSEED=random
 
 [testenv:pypy]
 basepython = pypy
