--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ deps = pip>=1.5.6
 changedir = {envtmpdir}
 commands =
     pip install Flocker[dev]
-    trial --rterrors flocker
+    trial --rterrors flocker.volume.functional.test_script.FlockerVolumeTests.test_no_permission
 
 [testenv:pypy]
 basepython = pypy
