--- a/python-flocker.spec.in
+++ b/python-flocker.spec.in
@@ -7,7 +7,7 @@ Summary:        Libraries for flocker
 BuildArch:      noarch
 
 License:        ASL 2.0
-URL:            https://hybridcluster.github.io/
+URL:            https://clusterhq.com
 Source0:        Flocker-%{flocker_version}.tar.gz
 
 BuildRequires:  python-devel
