--- a/docs/tutorial/volume-application.yml
+++ b/docs/tutorial/volume-application.yml
@@ -1,7 +1,7 @@
 "version": 1
 "applications":
   "mongodb-volume-example":
-    "image": "itamarst/test-mongodb"
+    "image": "mongodb-tutorial"
     "ports":
     - "internal": 27017
       "external": 27017
