Switch to new image in all configuration.

--- a/docs/tutorial/port-application.yml
+++ b/docs/tutorial/port-application.yml
@@ -1,7 +1,7 @@
 "version": 1
 "applications":
   "mongodb-port-example":
-    "image": "dockerfile/mongodb"
+    "image": "mongodb-tutorial"
     "ports":
     - "internal": 27017
       "external": 27017
