Analytics tracking codes

--- a/docs/_themes/bootstrap/theme.conf
+++ b/docs/_themes/bootstrap/theme.conf
@@ -7,8 +7,8 @@ nosidebar = false
 sidebarwidth = 200
 logo_width =
 logo_height =
-analytics_code =
-analytics_domain =
+analytics_code = UA-5968423-9
+analytics_domain = clusterhq.com
 github_user =
 github_repo =
 twitter_username =
