Disable stupid caching that breaks every time you change branches.

--- a/tox.ini
+++ b/tox.ini
@@ -30,4 +30,4 @@ basepython = python2.7
 changedir = {toxinidir}
 commands =
     pip install Flocker[doc]
-    sphinx-build -b html docs/ docs/_build/html
+    sphinx-build -a -b html docs/ docs/_build/html
