--- a/mongoimage/docker/Dockerfile
+++ b/mongoimage/docker/Dockerfile
@@ -5,5 +5,4 @@ VOLUME ["/data/db"]
 VOLUME ["/data/log"]
 RUN touch /home/mongodb/mongo.log
 RUN chmod 777 /home/mongodb/mongo.log 
-ADD mongo.conf /home/mongodb/mongo.conf
-CMD ["/home/mongodb/mongod", "--config=/home/mongodb/mongo.conf"]
+CMD /home/mongodb/mongod
