--- a/tox.ini
+++ b/tox.ini
@@ -30,4 +30,5 @@ basepython = python2.7
 changedir = {toxinidir}
 commands =
     pip install Flocker[doc]
+    rm -rf docs/_build/html
     sphinx-build -a -b html docs/ docs/_build/html
