--- a/docs/gettingstarted/tutorial/Vagrantfile
+++ b/docs/gettingstarted/tutorial/Vagrantfile
@@ -41,8 +41,8 @@ mkdir -p /opt/flocker
 truncate --size 1G /opt/flocker/pool-vdev
 zpool create flocker /opt/flocker/pool-vdev
 
-TAR="/tmp/vagrant-cache/dockerfile_mongodb.tar"
-IMAGE="dockerfile/mongodb"
+TAR="/tmp/vagrant-cache/clusterhq_mongodb.tar"
+IMAGE="clusterhq/mongodb"
 # Get the images needed for the tutorial.  This has to happen eventually and
 # doing it now aggregates all of the waiting in one place.
 if [ -e "${TAR}" ]; then
@@ -56,14 +56,6 @@ else
     docker save "${IMAGE}" > "${TAR}"
   fi
 fi
-
-# XXX This is a hack to reduce the size of the mongodb image. It can be removed
-# when we have created a smaller mongo image for use in this tutorial. See
-# https://github.com/ClusterHQ/flocker/issues/383
-mkdir /var/tmp/dockerbuild
-cd /var/tmp/dockerbuild
-echo "FROM dockerfile/mongodb\nCMD mongod --dbpath=/data --noprealloc --smallfiles" > Dockerfile
-docker build --tag mongodb-tutorial .
 SCRIPT
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
