reference clusterhq/mongodb image in place of old mongodb-tutorial image

--- a/docs/gettingstarted/tutorial/volume-application.yml
+++ b/docs/gettingstarted/tutorial/volume-application.yml
@@ -1,7 +1,7 @@
 "version": 1
 "applications":
   "mongodb-volume-example":
-    "image": "mongodb-tutorial"
+    "image": "clusterhq/mongodb"
     "ports":
     - "internal": 27017
       "external": 27017
