--- a/docs/gettingstarted/tutorial/port-application.yml
+++ b/docs/gettingstarted/tutorial/port-application.yml
@@ -1,7 +1,7 @@
 "version": 1
 "applications":
   "mongodb-port-example":
-    "image": "mongodb-tutorial"
+    "image": "clusterhq/mongodb"
     "ports":
     - "internal": 27017
       "external": 27017
