modified:   tutorial/Vagrantfile 	modified:   tutorial/volume-application.yml

--- a/docs/gettingstarted/tutorial/volume-application.yml
+++ b/docs/gettingstarted/tutorial/volume-application.yml
@@ -8,4 +8,4 @@
     "volume":
       # The location within the container where the data volume will be
       # mounted:
-      "mountpoint": "/data"
+      "mountpoint": "/data/db"
