--- a/tox.ini
+++ b/tox.ini
@@ -31,4 +31,5 @@ changedir = {toxinidir}
 commands =
     pip install Flocker[doc]
     rm -rf docs/_build/html
+    sphinx-build -a -b spelling docs/ docs/_build/spelling
     sphinx-build -a -b html docs/ docs/_build/html
