--- a/docs/gettingstarted/tutorial/Vagrantfile
+++ b/docs/gettingstarted/tutorial/Vagrantfile
@@ -8,6 +8,7 @@ Vagrant.require_version ">= 1.6.2"
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
 VAGRANTFILE_API_VERSION = "2"
 
+ENV['VAGRANT_DEFAULT_PROVIDER'] = 'virtualbox'
 
 $bootstrap = <<SCRIPT
 set -e
