--- a/docs/gettingstarted/mysql-application.yml
+++ b/docs/gettingstarted/mysql-application.yml
@@ -1,7 +1,7 @@
 "version": 1
 "applications":
   "mysql-volume-example":
-    "image": "mysql"
+    "image": "mysql:5.6.17"
     "environment":
       "MYSQL_ROOT_PASSWORD": "clusterhq"
     "ports":
