--- a/flocker/node/functional/env-docker/Dockerfile
+++ b/flocker/node/functional/env-docker/Dockerfile
@@ -1,4 +1,4 @@
-# Docker image that prints out the provide environment and then
+# Docker image that prints out the provided environment and then
 # loops forever.
 FROM busybox
 CMD ["/bin/sh",  "-c", "env > /data/env && while :; do :; done"]
