Update to use official images.

--- a/docs/gettingstarted/elk-application.yml
+++ b/docs/gettingstarted/elk-application.yml
@@ -1,14 +1,14 @@
 "version": 1
 "applications":
   "elasticsearch":
-    "image": "tomprince/test-elasticsearch"
+    "image": "clusterhq/elasticsearch"
     "ports":
     - "internal": 9200
       "external": 9200
     "volume":
       "mountpoint": "/var/lib/elasticsearch/"
   "logstash":
-    "image": "tomprince/test-logstash"
+    "image": "clusterhq/logstash"
     "ports":
     - "internal": 5000
       "external": 5000
@@ -17,7 +17,7 @@
       "remote_port": 9200
       "alias": "es"
   "kibana":
-    "image": "tomprince/test-kibana"
+    "image": "clusterhq/kibana"
     "ports":
     - "internal": 8080
       "external": 80
