--- a/python-flocker.spec.in
+++ b/python-flocker.spec.in
@@ -1,8 +1,6 @@
-%global underscore_version %{lua:version = rpm.expand("%{flocker_version}"):gsub("-","_"); print(version)}
-
 Name:           python-flocker
-Version:        %{underscore_version}
-Release:        1%{?dist}
+Version:        %{version}
+Release:        %{release}%{?dist}
 Summary:        Libraries for flocker
 BuildArch:      noarch
 
@@ -102,7 +100,7 @@ trial flocker
 %doc README.rst
 
 %{python2_sitelib}/flocker
-%{python2_sitelib}/Flocker-%{underscore_version}-py?.?.egg-info
+%{python2_sitelib}/Flocker-%{flocker_version}-py?.?.egg-info
 
 %files -n flocker-cli
 %doc README.rst
@@ -117,5 +115,5 @@ trial flocker
 %{_bindir}/flocker-reportstate
 
 %changelog
-* Tue Jun 10 2014 Tom Prince - %{underscore_version}-1%{?dist}
+* Tue Jun 10 2014 Tom Prince - %{version}-%{release}%{?dist}
 - Development version
