--- a/vagrant/tutorial/Vagrantfile
+++ b/vagrant/tutorial/Vagrantfile
@@ -7,7 +7,8 @@ VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "clusterhq/fedora20-updated"
   # Configure base system
-  config.vm.provision :shell, :path => "bootstrap.sh", :privileged => true
+  config.vm.provision :shell, :path => "bootstrap.py", :privileged => true,
+      :args => [ENV.fetch('FLOCKER_VERSION', ''), ENV.fetch('FLOCKER_BRANCH', ''),]
   # Prepare caches
   config.vm.provision :shell, :path => "cache.sh", :privileged => true
   # Cleanup
