Temporarily rip out Docker-py related code.

--- a/python-flocker.spec.in
+++ b/python-flocker.spec.in
@@ -23,7 +23,7 @@ BuildRequires:  PyYAML = 3.10
 BuildRequires:  python-treq = 0.2.1
 BuildRequires:  python-netifaces >= 0.8.0
 BuildRequires:  python-ipaddr = 2.1.10
-BuildRequires:  python-docker-py = 0.4.0
+#BuildRequires:  python-docker-py = 0.4.0
 # The test suite runs the ssh command-line client and uses other utilities such
 # as ssh-keygen.
 BuildRequires: openssh-clients
@@ -47,7 +47,7 @@ Requires:       python-flocker = %{version}-%{release}
 %package -n flocker-node
 Summary:        Node software for flocker
 Requires:       python-flocker = %{version}-%{release}
-Requires:       python-docker-py = 0.4.0
+#Requires:       python-docker-py = 0.4.0
 Requires:       docker-io
 Requires:       /usr/sbin/iptables
 Requires:       geard
