--- a/flocker/node/functional/env-docker/Dockerfile
+++ b/flocker/node/functional/env-docker/Dockerfile
@@ -1,4 +1,4 @@
-# Docker image that prints out the provided environment and then
-# loops forever.
+# Docker image that writes out the provided environment to /data/env and then
+# exits. Existence of the file /data/env indicates the file is fully written.
 FROM busybox
-CMD ["/bin/sh",  "-c", "env > /data/env && while :; do :; done"]
+CMD ["/bin/sh",  "-c", "env > /data/temp && mv /data/temp /data/env"]
