--- a/python-flocker.spec.in
+++ b/python-flocker.spec.in
@@ -117,5 +117,9 @@ trial flocker
 %{_bindir}/flocker-reportstate
 
 %changelog
-* Tue Jun 10 2014 Tom Prince - %{version}-%{release}%{?dist}
+
+* Fri Sep 26 2014 Richard Wall - 0.2.0-1
+- Modified macro names to allow development and pre-release version numbers.
+
+* Tue Jun 10 2014 Tom Prince - 0.0.1-1
 - Development version
