Get the sumo tests working in tox

--- a/tox.ini
+++ b/tox.ini
@@ -38,4 +38,7 @@ commands =
 [testenv:admin]
 basepython = python2.7
 usedevelop = True
-commands = trial --rterrors admin
+changedir = {toxinidir}
+commands =
+    pip install Flocker[release]
+    trial --rterrors admin
