Add RPM dependencies.

--- a/python-flocker.spec.in
+++ b/python-flocker.spec.in
@@ -22,6 +22,8 @@ BuildRequires:  python-treq = 0.2.1
 BuildRequires:  python-netifaces >= 0.8.0
 BuildRequires:  python-ipaddr = 2.1.10
 BuildRequires:  python-docker-py = 0.5.0
+BuildRequires:  python-jsonschema = 2.4.0
+BuildRequires:  python-klein = 0.2.3
 # The test suite runs the ssh command-line client and uses other utilities such
 # as ssh-keygen.
 BuildRequires: openssh-clients
@@ -37,6 +39,8 @@ Requires:       PyYAML = 3.10
 Requires:       python-treq = 0.2.1
 Requires:       python-netifaces >= 0.8.0
 Requires:       python-ipaddr = 2.1.10
+Requires:       python-jsonschema = 2.4.0
+Requires:       python-klein = 0.2.3
 
 %package -n flocker-cli
 Summary:        Docker orchestration and volume management frontend
