--- a/admin/build_targets/fedora20/Dockerfile
+++ b/admin/build_targets/fedora20/Dockerfile
@@ -1,3 +1,4 @@
+# Copyright Hybrid Logic Ltd. See LICENSE file for details.
 FROM mattdm/fedora-small:f20
 MAINTAINER Richard Wall <richard.wall@clusterhq.com>
 RUN ["curl", "--output", "/etc/yum.repos.d/hybridlogic.repo", "https://copr.fedoraproject.org/coprs/tomprince/hybridlogic/repo/fedora-20-x86_64/tomprince-hybridlogic-fedora-20-x86_64.repo"]
