--- a/admin/test_targets/ubuntu1404/Dockerfile
+++ b/admin/test_targets/ubuntu1404/Dockerfile
@@ -12,7 +12,7 @@
 FROM ubuntu:14.04
 MAINTAINER Richard Wall <richard.wall@clusterhq.com>
 RUN ["apt-get", "update"]
-RUN ["apt-get", "install", "--no-install-recommends", "-y", "build-essential", "git", "python-tox", "python-dev", "ruby-dev", "libssl-dev", "libffi-dev"]
+RUN ["apt-get", "install", "--no-install-recommends", "-y", "build-essential", "git", "python-tox", "python-dev", "ruby-dev", "libssl-dev", "libffi-dev", "lintian"]
 # Despite being a packaging tool, fpm isn't yet packaged for Ubuntu
 # See https://github.com/jordansissel/fpm/issues/611 and
 # https://github.com/jordansissel/fpm/issues/657
