--- a/python-flocker.spec.in
+++ b/python-flocker.spec.in
@@ -12,7 +12,7 @@ BuildRequires:  python-devel
 BuildRequires:  python
 BuildRequires:  python-setuptools
 # For tests
-BuildRequires:  python-eliot >= 0.4.0, python-eliot < 0.5.0
+BuildRequires:  python-eliot == 0.4.0
 BuildRequires:  pytz
 BuildRequires:  python-psutil = 2.1.2
 BuildRequires:  python-characteristic >= 14.1.0
@@ -31,7 +31,7 @@ BuildRequires: openssh-clients
 BuildRequires:  docker-io
 
 Requires:       python-setuptools
-Requires:       python-eliot >= 0.4.0, python-eliot < 0.5.0
+Requires:       python-eliot == 0.4.0
 Requires:       pytz
 Requires:       python-characteristic >= 14.1.0
 Requires:       python-twisted = 14.0.0
